--- a/src/components/CssModules.module.scss
+++ b/src/components/CssModules.module.scss
@@ -1,6 +1,6 @@
 .container {
   border: solid 2px #392eff;
-  border-radius: 20ppx;
+  border-radius: 20px;
   padding: 8px;
   margin: 8px;
   display: flex;
